--- a/WpfOX/MainWindow.xaml
+++ b/WpfOX/MainWindow.xaml
@@ -21,7 +21,7 @@
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-        <TextBox Grid.Row="0" Grid.Column="4" x:Name="Turn"  TextChanged="Turn_TextChanged">Turn</TextBox>
+        <TextBox Grid.Row="0" Grid.Column="4" x:Name="Turn"  TextChanged="Turn_TextChanged"></TextBox>
         <TextBox Grid.Row="0" Grid.Column="0" x:Name="Winner"  TextChanged="Winner_TextChanged">Winner:</TextBox>
         <Button x:Name="Position1" Height="60" Width="120" Grid.Column="1" Grid.Row="1" Click="Position1_Click"> </Button>
         <Button x:Name="Position2" Height="60" Width="120" Grid.Column="2" Grid.Row="1" Click="Position2_Click"> </Button>
